style responsive commit

--- a/src/app/pages/animes/components/animes-detail/animes-detail.component.scss
+++ b/src/app/pages/animes/components/animes-detail/animes-detail.component.scss
@@ -6,6 +6,7 @@
     flex-wrap: wrap;
     
     h2{
+        font-size: 2rem;
         color: whitesmoke;
     }
     p{
@@ -13,7 +14,7 @@
     }
 
     .anime-container__card{
-        margin-top: 400px;
+        margin-top: 30vh;
 
     img{
         max-width: 100vw;
