--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -5,17 +5,22 @@ footer{
     flex-direction: column;
     flex-wrap: wrap;
     width: 100vw;
-    max-height:250px;
+    height: 20vh;
+    max-height:20vh;
     bottom: 0;
     background-color: #000000;
     img{
         width:20vw;
         max-width: 150px;
         max-height: 250px;
+        margin-left: 5vw;
+        margin-top: 5vh;
  
     }
     p{
         font-size: 1rem;
+        margin-left: 5vw;
+        margin-top: 2vh;
     }
     .footer-container{
         text-align: justify;
@@ -24,19 +29,22 @@ footer{
         flex-wrap: wrap;
         justify-content: space-around;
         color:aliceblue;
-        padding: 5vh;
         max-width: 50px;
         max-height: 150px;
     }
     a{
         color:rgb(247, 156, 20);
         font-size: 1rem;
+        margin-left: 5vw;
+        margin-top: 5vh;
     }
 }
 @media (min-width: 768px) and (max-width: 2560px) {
     footer{
+        width: 100vw;
+        height: 20vh;
         flex-direction: row;
-        max-height:250px;
+
     }
     .footer-container{
         flex-direction: row;
