--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -14,30 +14,32 @@ h1{
 
 }
 img{
-    margin-top: 250px;
+    margin-top: 50px;
     width: 800px;
     max-width: 100vw;
     max-height:100vh;
 }
 p{
+    margin-top: 30vh;
     margin: 20px;
     width:80vw;
     color: rgb(255, 255, 255);
     text-align: left;
 }
-@media (min-width: 768px) and (max-width: 2560px) {
+@media (min-width: 1024px){
     .about-container{
     flex-direction: row;
     align-items: center;
+    min-height: 100vh;
     }
     img{
-        margin-top: 300px;
+        margin-top: 200px;
         width: 800px;
         max-width: 100vw;
         max-height:100vh;
     }
     p{
-        margin-top: 40px;
+        margin-top:40vh;
         width:80vw;
         color: rgb(255, 255, 255);
     }
