--- a/src/app/pages/animes/animes.component.scss
+++ b/src/app/pages/animes/animes.component.scss
@@ -27,9 +27,11 @@ h2{
     align-items: center;
     justify-content: space-around;
     flex-wrap: wrap;
+    max-height: 80vh;
+    overflow-y: scroll;
     &__card {
+        margin-top: 30vh;
         padding:100px;
-        margin-top: 400px;
         height: 200px;
         width: 30%;
   
