--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -11,10 +11,9 @@ h1{
     display: flex;
     flex-direction: column;
     text-align: center;
-
 }
 img{
-    margin-top: 250px;
+    margin-top: 20vh;
     width: 800px;
     max-width: 100vw;
     max-height:100vh;
@@ -25,7 +24,7 @@ p{
     color: rgb(255, 255, 255);
     text-align: left;
 }
-@media (min-width: 768px) and (max-width: 2560px) {
+@media (min-width: 1024px){
     .home-container{
     flex-direction: row;
     align-items: center;
