--- a/src/app/pages/characters/characters.component.scss
+++ b/src/app/pages/characters/characters.component.scss
@@ -34,8 +34,8 @@ h2{
   overflow-y: scroll;
 
   &__card {
-    margin-top: 30vh;
-    height: 200px;
+    margin-top: 34vh;
+    height: 40%;
     width: 40%;
 
     &:hover{
