--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -11,7 +11,26 @@ h1{
     display: flex;
     flex-direction: column;
     text-align: center;
+    min-height: 100vh;
+    overflow-y: scroll;
+    
+}
+.about-container::-webkit-scrollbar{
+    background-color: rgb(0, 0, 0);
+    width:2px;
+    border-radius: 20px
 
+}
+.about-container::-webkit-scrollbar-thumb {
+    background-color: rgb(255, 255, 255);
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 20px;
+    width: 3px;
+}
+.about-container::-webkit-scrollbar-track {
+    width: 1px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px
 }
 img{
     margin-top: 50px;
@@ -20,8 +39,9 @@ img{
     max-height:100vh;
 }
 p{
+    margin-left: 2vw;
     margin-top: 30vh;
-    margin: 20px;
+    font-size: 0.8rem;
     width:80vw;
     color: rgb(255, 255, 255);
     text-align: left;
@@ -40,6 +60,7 @@ p{
     }
     p{
         margin-top:40vh;
+        font-size: 1.2rem;
         width:80vw;
         color: rgb(255, 255, 255);
     }
